--- a/conditional-project.html
+++ b/conditional-project.html
@@ -84,6 +84,7 @@
      
      if(e_button == 2){
          fill(random(93), random(150), random(252));//drag from the blue rectangle to get a strand of color blue
+         ellipse(mouseX, mouseY, 15, 15)
          textSize(32);
          text("Awesome!", 160, 300);
      }
